@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add autoderef to DeprecatedFeatures policy
 
 0.018     2016-12-08 21:32:40 EST
   - Add IndirectObjectNotation policy
